MyDev Project/src/objects/fullfillment__c.object
<CustomObject>
    <fields>
        <fullName>AccountFullfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>fullfillments</relationshipLabel>
        <relationshipName>fullfillments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DeliveryDate__c</fullName>
        <description>delivery of product takes place</description>
        <label>DeliveryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <description>Location at which product is delivered</description>
        <label>Delivery Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>oppFullfillment__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>fullfillments</relationshipLabel>
        <relationshipName>fullfillments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>fullfillment</label>
    <nameField>
        <label>fullfillment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>fullfillments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>